fix: backwards compatibility issue with full width button on mobile in dh button group and action components

--- a/components/Action/src/index.scss
+++ b/components/Action/src/index.scss
@@ -58,6 +58,8 @@
   }
 
   &__actions {
+    --utrecht-button-max-inline-size: 100%;
+
     display: flex;
     align-items: center;
     gap: var(--denhaag-action-actions-gap);
